# jobjrnl

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20230223022031_jobjrnl.sql
src/: lib.rs  main.rs
