[package]
name = "jobjrnl"
version = "0.1.0"
edition = "2021"
authors = [ "Christopher Leggett <chris@leggett.dev>" ]
license = "MIT"
repository = "https://github.com/leggettc18/jobjrnl"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "sqlite", "chrono" ] }
async-std = { version = "1", features = [ "attributes" ] }
async-trait = "0.1.68"

[dependencies.clap]
version = "4.0.23"
features=["derive"]
